@@ -22,6 +22,7 @@ import static apgas.Constructs.places;
 import static apgas.Constructs.uncountedAsyncAt;
 
 import apgas.Configuration;
+import apgas.ExtendedConstructs;
 import apgas.GlobalRuntime;
 import apgas.Place;
 import apgas.impl.elastic.MalleableHandler;
@@ -29,9 +30,9 @@ import apgas.util.ConsolePrinter;
 import apgas.util.GlobalID;
 import apgas.util.GlobalRef;
 import apgas.util.PlaceLocalObject;
-import apgas.util.SchedulerMessages;
 import handist.glb.multiworker.lifeline.LifelineStrategy;
 import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -79,51 +80,244 @@ import java.util.concurrent.atomic.AtomicIntegerArray;
 
 /** <R> type of the result produced by the computation <B> type of the computation bag */
 public class GLBcomputer<R extends Fold<R> & Serializable, B extends Bag<B, R> & Serializable>
-extends PlaceLocalObject {
+extends PlaceLocalObject implements MalleableHandler {
+
 
 	/**
-	 * Handler for the GLB scheme for when malleable orders are received
+	 * When a shrink order is received, the places chosen to be removed are cut off from the
+	 * lifeline network and their work is sent back to remaining places. Their intermediary
+	 * result also needs to be transferred back to remaining places to be merged.
+	 * <p>In this implementation, we always choose the places with the largest IDs to be released.
 	 */
-	private static class GlbMalleableHandler implements MalleableHandler {
-		/** Serial version UID */
-		private static final long serialVersionUID = 2664467878141956007L;
+	@Override
+	public List<Place> preShrink(int nbPlaces) {
+		mallActive.set(true);
+		// Choose the places that are going to be shut down
+		final int currentNumberPlaces = places().size();
+		final int numberPlacesAfterShutdown = currentNumberPlaces - nbPlaces;
+		ArrayList<Place> toStop = new ArrayList<>(nbPlaces);
+		ArrayList<Place> toContinue = new ArrayList<>(numberPlacesAfterShutdown);
+		int largestIDRemaining = -1;
 
-		/**
-		 * When a shrink order is received, the places chosen to be removed are cut off from the
-		 * lifeline network and their work is sent back to remaining places. 
-		 */
-		@Override
-		public List<Place> preShrink(int nbPlaces) {
-			// TODO Auto-generated method stub
-			return null;
+		int k=0;
+		for (Place p : places()) {
+			k++;
+			if (k <= numberPlacesAfterShutdown) {
+				// This place is kept
+				toContinue.add(p);
+				if (p.id > largestIDRemaining) {
+					largestIDRemaining = p.id;
+				}
+			} else {
+				// This place is removed
+				toStop.add(p);
+			}
 		}
+		final int largestId = largestIDRemaining;
 
-		/**
-		 * Nothing in particular needs to be performed before a grow order is put into place
-		 */
-		@Override
-		public void preGrow(int nbPlaces) {
-		}
+		finish (()->{
+			for (Place p: toContinue){
+				// For the places to be removed: stop stealing, send work and intermediary results away to other places
+				asyncAt(p, ()->recalculateLifelinesBeforeShrink(largestId, toContinue, toStop));
+			}
+		});
 
-		/**
-		 * After the reduction in the number of running places, nothing in particular needs to be performed
-		 */
-		@Override
-		public void postShrink(int nbPlaces, List<? extends Place> currentPlaces) {
-		}
+		finish (()->{
+			for (Place p: toStop) {
+				// For the places that remain, remove the lifelines to places to remove
+				asyncAt(p, ()->transferWorkBeforeShutdown(toStop));
+			}
+		});
 
-		/**
-		 * After new places were spawned, new GlbComputer instances need to be instanciated on the new places.
-		 * After that, these new places are integrated into the lifeline network so that they can start stealing
-		 * work from the currently running places.
-		 */
-		@Override
-		public void postGrow(int nbPlaces, List<? extends Place> currentPlaces, List<? extends Place> newPlaces) {
-			// TODO Auto-generated method stub
-			
-		}
-		
+		return toStop;
 	}
+
+	private void transferWorkBeforeShutdown(ArrayList<Place> toStop) throws InterruptedException {
+		mallShutdown.set(true);
+		shutdown = true;
+		lifelineAnswerLock.unblock();
+		workerLock.unblock();
+		final B dealBag = queueInitializer.get();
+
+		synchronized (workerBags) {
+			state = -3;
+		}
+
+		int myWorkerCount = workerCount;
+		while (myWorkerCount > 0) {
+			synchronized (workerBags) {
+				myWorkerCount = workerCount;
+			}
+			console.println(
+					"synchronized (workerBags): while (this.workerCount > 0): waiting, myWorkerCount="
+							+ myWorkerCount
+							+ ", workerAvailableLocks.size="
+							+ workerAvailableLocks.size()
+							+ ", lifelineAnswerThreadExited="
+							+ lifelineAnswerThreadExited);
+			console.println("" + this.POOL);
+			if (myWorkerCount > 0) {
+				TimeUnit.MILLISECONDS.sleep(100);
+			}
+		}
+
+		synchronized (workerBags) {
+			synchronized (intraPlaceQueue) {
+				console.println(
+						"intraPlaceQueue.result="
+								+ this.intraPlaceQueue.getResult()
+								+ ", taskCount="
+								+ this.intraPlaceQueue.getCurrentTaskCount());
+				console.println(
+						"interPlaceQueue.result="
+								+ this.interPlaceQueue.getResult()
+								+ ", taskCount="
+								+ this.interPlaceQueue.getCurrentTaskCount());
+
+				dealBag.merge(this.intraPlaceQueue);
+				dealBag.merge(this.interPlaceQueue);
+
+				final int worker = GLBMultiWorkerConfiguration.GLB_MULTIWORKER_WORKERPERPLACE.get();
+				if (workerBags.size() != worker) {
+					console.println(
+							"Error: workerBags.size()="
+									+ workerBags.size()
+									+ ", but should be "
+									+ worker);
+				} else {
+					console.println("successful waited for stop all workers");
+				}
+
+				for (final WorkerBag wb : workerBags) {
+					dealBag.merge(wb.bag);
+					console.println(
+							"merged workbag.id="
+									+ wb.workerId
+									+ ", wb.bag.result="
+									+ wb.bag.getResult()
+									+ ", taskCount="
+									+ wb.bag.getCurrentTaskCount());
+				}
+			}
+		}
+		console.println(
+				"dealBag.result="
+						+ dealBag.getResult()
+						+ ", taskCount="
+						+ dealBag.getCurrentTaskCount());
+
+		final PlaceLogger l = logger;
+
+		int target = 0;
+		for (int i : REVERSE_LIFELINE) {
+			if (!toStop.contains(place(i))) {
+				target = i;
+				break;
+			}
+		}
+		console.println("found target for sending remaining tasks: " + target);
+		asyncAt(
+				place(target),
+				() -> {
+					console.println(
+							"(in asyncAt) (before deal), dealBag.result="
+									+ dealBag.getResult()
+									+ ", taskCount="
+									+ dealBag.getCurrentTaskCount());
+
+					console.println("(in asyncAt) (before deal), state=" + state);
+					deal(-42, dealBag, null);
+					console.println("(in asyncAt) (after deal), state=" + state);
+				});
+	}
+
+	/**
+	 * Nothing in particular needs to be performed before a grow order is put into place.
+	 */
+	@Override
+	public void preGrow(int nbPlaces) {
+		mallActive.set(true);
+	}
+
+	/**
+	 * After the reduction in the number of running places, nothing in particular needs to be performed
+	 */
+	@Override
+	public void postShrink(int nbPlaces, List<? extends Place> currentPlaces) {
+		System.err.println("Malleable shrinkage completed");
+		mallActive.set(false);
+	}
+
+	/**
+	 * After new places were spawned, new GlbComputer instances need to be instanciated on the new places.
+	 * After that, these new places are integrated into the lifeline network so that they can start stealing
+	 * work from the currently running places.
+	 */
+	@Override
+	public void postGrow(int nbPlaces, List<? extends Place> continuedPlaces, List<? extends Place> newPlaces) {
+		final GlobalID globalID = getId(this);
+		SerializableSupplier<R> _resultInitializer = this.resultInitializer;
+		SerializableSupplier<B> _queueInitializer = this.queueInitializer;
+		SerializableSupplier<B> _workerInitializer = this.workerInitializer;
+
+		final ArrayList<Integer> newPlaceIds = new ArrayList<>();
+		for (Place p : newPlaces) {
+			newPlaceIds.add(p.id);
+		}
+
+		// Prepare new GlbComputer objects on the new places
+		finish(()->{
+			for (Place newPlace : newPlaces) {
+				try {
+					asyncAt(newPlace, () -> {
+						try {
+							System.err.println("Initializing GlbComputer on " + here());
+							// Create a GlbComputer instance and bind it to the existing GlobalId
+							final GLBcomputer<R, B> newComputer = new GLBcomputer<R, B>();
+							newComputer.id = globalID;
+							globalID.putHere(newComputer);
+
+							// Reset it so that it prepares the necessary data structures and starts stealing
+							newComputer.reset(_resultInitializer, _queueInitializer, _workerInitializer, true, newPlaceIds, false);
+						} catch (Exception e) {
+							System.err.println("Exception when initializing new GlbComputer on " + here());
+							e.printStackTrace();
+							throw e;
+						}
+					});
+				} catch (Exception e) {
+					System.err.println("Exception submitting the tasks to setup new places");
+					e.printStackTrace();
+					throw e;
+				}
+			}
+		});
+		finish(()->{
+			for (Place continuedPlace : continuedPlaces) {
+				// Recalculate the lifeline for the continued places
+				try {
+					immediateAsyncAt(continuedPlace, ()->{
+						try {
+							System.err.println("Re-calculating lifelines on " + here());
+							recalculateLifelinesAfterGrow(newPlaces);
+						} catch (Exception e) {
+							System.err.println("Exception when refreshing lifelines on " + here());
+							e.printStackTrace();
+							throw e;
+						}
+					});
+				} catch (Exception e) {
+					System.err.println("Exception submitting the tasks to refresh lifelines on continued places");
+					e.printStackTrace();
+					throw e;
+				}
+			}
+		});
+
+		System.err.println("Malleable growth completed");
+		mallActive.set(false);
+	}
+
 
 	/** Printing Helper */
 	private static final transient ConsolePrinter console = ConsolePrinter.getInstance();
@@ -349,8 +543,8 @@ extends PlaceLocalObject {
 			ls =
 					(LifelineStrategy)
 					Class.forName(GLBMultiWorkerConfiguration.GLB_MULTIWORKER_LIFELINESTRATEGY.get())
-					.newInstance();
-		} catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+					.getDeclaredConstructor().newInstance();
+		} catch (NoSuchMethodException | InvocationTargetException | InstantiationException | IllegalAccessException | ClassNotFoundException e) {
 			e.printStackTrace();
 		}
 
@@ -517,6 +711,12 @@ extends PlaceLocalObject {
 		this.queueInitializer = queueInitializer;
 		this.workerInitializer = workerInitializer;
 		resetAll(false);
+
+		// We set the malleable handler to `this` if in malleable mode
+		//		if (Configuration.APGAS_ELASTIC.equals(Configuration.APGAS_ELASTIC_MALLEABLE)) {
+		mallActive = new AtomicBoolean(false);
+		ExtendedConstructs.defineMalleableHandle(this);
+		//		}
 
 		// We launch the computation
 		final long start = System.nanoTime();
@@ -1082,7 +1282,7 @@ extends PlaceLocalObject {
 			// called by computeDynamic: bags are empty
 			// called by computeStatic: bags contain already tasks
 			WorkerBag workerBag = new WorkerBag(i, workerInitializer);
-			if (staticTasks == true) {
+			if (staticTasks) {
 				workerBag.initStaticTasks();
 			}
 			workerBags.add(workerBag);
@@ -1289,40 +1489,40 @@ extends PlaceLocalObject {
 		if (mallEnabled /*&& numMallPlaces > 0*/) {
 			mallActive = new AtomicBoolean(false);
 
-//			async(
-//					() -> {
-//						// boolean addPlaces =
-//						GLBMultiWorkerConfiguration.GLB_MULTIWORKER_MALLEABILITY_ADD.get();
-//						if (isSocketClosed) return;
-////						SchedulerMessages message = receiveSchedulerMessage();
-//						String behavior = message.getBehavior();
-//						int numMallPlaces = message.getNumMallPlaces();
-//						List<String> hostnames = message.getHostNames();
-//						console.println("behavior = " + behavior);
-//
-//						List<Integer> newPlaceIDs = null;
-//						if (message.getBehaviorAsNum() == 0 /*expand*/) {
-//							newPlaceIDs = malleabilityEarlyStartNewPlaces(numMallPlaces);
-//						}
-//
-//						while (mallActive.get()) {
-//							TimeUnit.MILLISECONDS.sleep(500);
-//						}
-//
-//						if (shutdown) {
-//							return;
-//						}
-//						console.println("malleability starts, addPlaces=" + behavior);
-//
-//						if (message.getBehaviorAsNum() == 0) {
-//							/*add palces*/
-//							malleabilityAdd(behavior, newPlaceIDs, numMallPlaces);
-//						} else if (message.getBehaviorAsNum() == 1) { // kill places
-//							malleabilityShrink(behavior, numMallPlaces);
-//							sendRemovedHosts();
-//						}
-//						malleabilityTestingWithScheduler();
-//					});
+			//			async(
+			//					() -> {
+			//						// boolean addPlaces =
+			//						GLBMultiWorkerConfiguration.GLB_MULTIWORKER_MALLEABILITY_ADD.get();
+			//						if (isSocketClosed) return;
+			////						SchedulerMessages message = receiveSchedulerMessage();
+			//						String behavior = message.getBehavior();
+			//						int numMallPlaces = message.getNumMallPlaces();
+			//						List<String> hostnames = message.getHostNames();
+			//						console.println("behavior = " + behavior);
+			//
+			//						List<Integer> newPlaceIDs = null;
+			//						if (message.getBehaviorAsNum() == 0 /*expand*/) {
+			//							newPlaceIDs = malleabilityEarlyStartNewPlaces(numMallPlaces);
+			//						}
+			//
+			//						while (mallActive.get()) {
+			//							TimeUnit.MILLISECONDS.sleep(500);
+			//						}
+			//
+			//						if (shutdown) {
+			//							return;
+			//						}
+			//						console.println("malleability starts, addPlaces=" + behavior);
+			//
+			//						if (message.getBehaviorAsNum() == 0) {
+			//							/*add palces*/
+			//							malleabilityAdd(behavior, newPlaceIDs, numMallPlaces);
+			//						} else if (message.getBehaviorAsNum() == 1) { // kill places
+			//							malleabilityShrink(behavior, numMallPlaces);
+			//							sendRemovedHosts();
+			//						}
+			//						malleabilityTestingWithScheduler();
+			//					});
 		}
 	}
 
@@ -1373,7 +1573,7 @@ extends PlaceLocalObject {
 		for (int shutdownId : shutdownPlacesIDs) {
 			placesToBeRemoved.add(place(shutdownId));
 		}
-//		ShutdownMallPlacesBlocking(placesToBeRemoved);
+		//		ShutdownMallPlacesBlocking(placesToBeRemoved);
 		// TODO just for experiments no process killing, because hazelcast laggs
 		// Constructs.shutdownMallPlacesBlocking(placesToBeRemoved, true);
 		after = System.nanoTime();
@@ -1410,7 +1610,7 @@ extends PlaceLocalObject {
 						List<Integer> newPlaceIDs = null;
 						// TODO just for experiments
 						if (addPlaces) {
-//							newPlaceIDs = malleabilityEarlyStartNewPlaces(numMallPlaces);
+							//							newPlaceIDs = malleabilityEarlyStartNewPlaces(numMallPlaces);
 						}
 						long end = System.nanoTime();
 
@@ -1641,21 +1841,21 @@ extends PlaceLocalObject {
 		}
 	}
 
-//	private List<Integer> malleabilityEarlyStartNewPlaces(final int numPlacesToAdd) {
-//		long start, end;
-//		start = System.nanoTime();
-//		final boolean verbose = Configuration.APGAS_VERBOSE_LAUNCHER.get();
-//		List<Integer> newPlaceIDs = startMallPlacesBlocking(numPlacesToAdd, verbose);
-//		end = System.nanoTime();
-//		console.printlnAlways("malleabilityStartNewPlaces: " + (end - start) / 1e9);
-//		return newPlaceIDs;
-//	}
-//
-//	private void ShutdownMallPlacesBlocking(List<Place> shutdownPlacesIDs) {
-//		final boolean verbose = Configuration.APGAS_VERBOSE_LAUNCHER.get();
-//		shutdownMallPlacesBlocking(shutdownPlacesIDs, verbose);
-//		console.println("malleablityRemovePlaces");
-//	}
+	//	private List<Integer> malleabilityEarlyStartNewPlaces(final int numPlacesToAdd) {
+	//		long start, end;
+	//		start = System.nanoTime();
+	//		final boolean verbose = Configuration.APGAS_VERBOSE_LAUNCHER.get();
+	//		List<Integer> newPlaceIDs = startMallPlacesBlocking(numPlacesToAdd, verbose);
+	//		end = System.nanoTime();
+	//		console.printlnAlways("malleabilityStartNewPlaces: " + (end - start) / 1e9);
+	//		return newPlaceIDs;
+	//	}
+	//
+	//	private void ShutdownMallPlacesBlocking(List<Place> shutdownPlacesIDs) {
+	//		final boolean verbose = Configuration.APGAS_VERBOSE_LAUNCHER.get();
+	//		shutdownMallPlacesBlocking(shutdownPlacesIDs, verbose);
+	//		console.println("malleablityRemovePlaces");
+	//	}
 
 	private List<Integer> malleabilityStartNewPlaces(
 			List<Integer> newPlaceIDs, final int numPlacesToAdd) {
@@ -1740,6 +1940,88 @@ extends PlaceLocalObject {
 
 		end = System.nanoTime();
 		return newPlaceIDs;
+	}
+
+	/**
+	 * Routine called on the places that will remain with the runtime just before the shrink is performed.
+	 * These places will re-compute their lifelines and discard any lifeline connecting to a place which is
+	 * about to be removed as part of the shrink operation
+	 * @param highestID the largest place ID for the places that remain in the runtime
+	 * @param allRemainingPlaces the places that will still be participating in the runtime after the shrink operation
+	 * @param removedPlaces the list of places to be removed from the runtime
+	 */
+	private void recalculateLifelinesBeforeShrink(int highestID, List<Place> allRemainingPlaces, List<Place> removedPlaces) {
+		synchronized (lifelineLock) {
+			this.mallHighestPlaceID.set(highestID);
+			this.LIFELINE = lifelineStrategy.lifeline(HOME.id, allRemainingPlaces);
+			this.REVERSE_LIFELINE =
+					this.lifelineStrategy.reverseLifeline(HOME.id, allRemainingPlaces);
+
+			console.println("New LIFELINE=" + Arrays.toString(LIFELINE));
+			console.println("New REVERSE_LIFELINE=" + Arrays.toString(REVERSE_LIFELINE));
+
+			console.println("before lifelineThieves=" + this.lifelineThieves);
+			for (Place p : removedPlaces) {
+				this.mallRemovedPlaces.add(p.id);
+				lifelineThieves.remove(p.id);
+				lifelineEstablished.put(p.id, true); // hack preventing the re-establishment of a lifeline on a place about to stop, the lifeline is actually not established
+			}
+			console.println("after lifelineThieves=" + this.lifelineThieves);
+			console.println("removedMallPlaces=" + this.mallRemovedPlaces);
+
+			for (final int i : LIFELINE) {
+				if (lifelineEstablished.contains(i) == false) {
+					lifelineEstablished.put(i, false);
+				}
+			}
+			console.println("lifelineEstablished=" + lifelineEstablished);
+
+			console.println("lifelineThieves=" + lifelineThieves);
+		}
+	}
+
+	/**
+	 * Procedure used to recalculate the lifeline network when places are added and/or removed from the runtime.
+	 * This method is called by {@link #postGrow(int, List, List)} and {@link #preShrink(int, List)} on each place
+	 * that is continuing execution.
+	 * @param addedPlaces places that were added as a result of the previous malleable operation (may be empty)
+	 * @param removedPlaces places that were removed as aresult of the previous malleable operation (may be empty)
+	 */
+	private void recalculateLifelinesAfterGrow(List<? extends Place> addedPlaces) {
+		List<? extends Place> allPlaces = places();
+		final int nbPlaces = allPlaces.size();
+		boolean startLifelineThread = false;
+
+		synchronized (lifelineLock) {
+			mallHighestPlaceID.set(allPlaces.get(nbPlaces-1).id);
+			LIFELINE = lifelineStrategy.lifeline(HOME.id, allPlaces);
+			REVERSE_LIFELINE = lifelineStrategy.reverseLifeline(HOME.id, allPlaces);
+
+			console.println("New LIFELINE=" + Arrays.toString(LIFELINE));
+			console.println("New REVERSE_LIFELINE=" + Arrays.toString(REVERSE_LIFELINE));
+
+			for (final int i : LIFELINE) {
+				if (!lifelineEstablished.contains(i)) {
+					lifelineEstablished.put(i, false);
+				}
+			}
+			console.println("lifelineEstablished=" + lifelineEstablished);
+
+			// Establish lifeline on current place in stead of newly added places
+			for (final int i : REVERSE_LIFELINE) {
+				if (addedPlaces.contains(place(i))) {
+					lifelineThieves.add(i);
+					startLifelineThread = true;
+				}
+			}
+
+			console.println("lifelineThieves=" + lifelineThieves);
+
+			if (startLifelineThread) {
+				lifelineAnswerLock.unblock(); // unblocking lifeline answer thread
+				lifelineToAnswer = true;
+			}
+		}
 	}
 
 	private void malleabilityRecalculateLifelines(
